<resources>
    <string name="app_name">简记</string>
    <string name="Welcome">Welcome to EasyNotes</string>
    <string name="StudyNotes">StudyNotes</string>
    <string name="title_activity_study">study</string>
    <string name="学习笔记">学习笔记</string>
    <string name="单词本">单词本</string>
    <string name="待办事项">待办事项</string>
    <string name="记账本">记账本</string>
    <string name="更多">更多</string>
    <string name="收入">收入</string>
    <string name="支出">支出</string>
    <string name="结余">结余</string>
    <string name="请输入金额">请输入金额</string>
    <string name="添加单词记录">添加单词记录</string>
    <string name="添加至单词本">添加至单词本</string>
    <string name="备份">备份</string>
    <string name="恢复">恢复</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_slide">SlideActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="这是学习fragment">这是学习fragment</string>
    <string name="这是单词本fragment">这是单词本fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_todo">Todo</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="添加">添加</string>
    <string name="已完成">已完成</string>
    <string name="words">Words</string>
    <string name="翻译">翻译</string>
    <string name="添加待办事项">添加待办事项</string>
    <string name="修改">修改</string>
    <string name="abc">ABC</string>
    <string name="单词">单词</string>
    <string name="保存修改">保存修改</string>
    <string name="详情">详情</string>
    <string name="修改金额">修改金额</string>
    <string name="例句">例句</string>
    <string name="保存">保存</string>
    <string name="短语">短语</string>
    <string name="手机号">手机号</string>
    <string name="验证码">验证码</string>
    <string name="获取验证码">获取验证码</string>
    <string name="登陆">登陆</string>
    <string name="修改待办事项">修改待办事项</string>
    <string name="完成时间">完成时间</string>
    <string name="修改时间">修改时间</string>
    <string name="修改完成时间">修改完成时间</string>
    <string name="期望完成时间">期望完成时间</string>
    <string name="标题">标题</string>
    <string name="内容">内容</string>
    <string name="编辑">编辑</string>
</resources>
