<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dapeng.notes.Words.WordsEdit">

    <ImageView
        android:layout_width="153dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:src="@drawable/abc"
        android:contentDescription="@string/abc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/WordsInEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/单词"
            android:inputType="text"/>
        <EditText
            android:id="@+id/TranslationInEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/翻译"
            android:inputType="text" />
        <EditText
            android:id="@+id/PhraseInEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/短语"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="3"/>
        <EditText
            android:id="@+id/OthersInEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/例句"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="3"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveEditedWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/保存修改"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"/>

</LinearLayout>
