<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dapeng.notes.Study.AddStudy">

    <EditText
        android:id="@+id/title_et"
        android:hint="@string/标题"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <EditText
        android:id="@+id/content_et"
        android:layout_weight="1"
        android:hint="@string/内容"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/addStudy_bt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/保存"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>
