<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme"
    tools:context="com.dapeng.notes.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/ListButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/待办事项"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            />
        <Button
            android:id="@+id/StudyButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/学习笔记"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/WordsButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/单词本"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            />
        <Button
            android:id="@+id/MoneyButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/记账本"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<Button-->
            <!--android:id="@+id/Beifen"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="80dp"-->
            <!--android:text="@string/备份"-->
            <!--android:backgroundTint="@color/white"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--/>-->
        <!--<Button-->
            <!--android:id="@+id/Huifu"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="80dp"-->
            <!--android:text="@string/恢复"-->
            <!--android:backgroundTint="@color/white"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:layout_marginStart="10dp"-->
            <!--android:layout_marginEnd="10dp"-->
            <!--/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/更多"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>



</LinearLayout>