<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dapeng.notes.Money.Money">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@drawable/moneypackeg3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/realOutText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="00.00"
                        android:textColor="@color/themeColor"
                        android:textSize="28sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/结余"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/outAllText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/支出"
                    android:textColor="#EEB422"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/inAllText"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/收入"
                    android:textColor="#EEB422"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editMoeny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/请输入金额"
                android:inputType="numberDecimal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/outButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red_money"
                    android:text="@string/支出"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/inButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/outButton"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red_money"
                    android:text="@string/收入"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view_money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"></ListView>
    </LinearLayout>

</LinearLayout>
